--- a/OnlineLearningAcademy/pom.xml
+++ b/OnlineLearningAcademy/pom.xml
@@ -11,7 +11,7 @@
 	<groupId>com.flekk</groupId>
 	<artifactId>OnlineLearningAcademy</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>war</packaging>
+	<packaging>jar</packaging>
 	<name>OnlineLearningAcademy</name>
 	<description>Project for Online Learning Academy</description>
 	<properties>
@@ -81,16 +81,6 @@
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-slf4j-impl</artifactId>
 			<version>2.20.0</version>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.security</groupId>
-			<artifactId>spring-security-test</artifactId>
-			<scope>test</scope>
 		</dependency>
 	</dependencies>
 
