--- a/OnlineLearningAcademy/src/main/resources/application.properties
+++ b/OnlineLearningAcademy/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/online_learning_academy
+spring.datasource.url=jdbc:mysql://db:3306/online_learning_academy?allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
